--- a/AgilProjekt/src/assets/base.css
+++ b/AgilProjekt/src/assets/base.css
@@ -9,3 +9,15 @@ div.info{
     color: white;
     font-size: 1.5em;
 }
+@media (max-width: 1016px) {
+    .navbar {
+        opacity: 0.95;
+    }
+
+    .logo {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        font-size: 2.5rem;
+    }
+}
