--- a/AgilProjekt/src/assets/base.css
+++ b/AgilProjekt/src/assets/base.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     background-color: black;
     font-family: math;
+    min-height: 100vh;
 }
 div.info{
     padding: 25px 50px;
